--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,8 +10,13 @@ body {
   padding: 0;
 }
 
+@media (max-height: 900px) {
+  body {
+    height: 100vh;
+  }
+}
+
 body {
-  height: 100vh;
   width: 100vw;
   font-family: 'Roboto', sans-serif;
 }
