--- a/sass/components/_video-screen.scss
+++ b/sass/components/_video-screen.scss
@@ -75,7 +75,7 @@
   display: none
 }
 
-#video-screen__reboot {
+#video-screen__vehicle {
   display: flex;
   align-items: center;
   flex-direction: column;
